--- a/public/index.html
+++ b/public/index.html
@@ -1,113 +1,94 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js" integrity="sha512-kg6fSrg6FkD9Ua02PzuA289KatVkTp6HdiFrSKwnz1bKBeKe5JG54rNeYZeghYO/I4ka49rb9H/9Ezcq9Se3iQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-		
-		<title>
-		
-		</title>
-	</head>
-	
-	<body>
-		<h1>ENTI Survivors</h1>
-		
-		<script>
-		
-			const config = {
-				width: 960,
-				height: 540,
-				physics:{
-					default:'arcade',
-					arcade:{
-						debug: true
-					}
-				},
-				scene:{
-					preload: precarga,
-					create: crear,
-					update: actualiza
-				}
-			}
-			
-			const game = new Phaser.Game(config);
-			
-			let player;
-			let player_speed = 2;
-			let enemy_padding = 128;
-			let enemies = [];
-			let enemies_pos = [
-				{x: enemy_padding, y: enemy_padding},
-				{x: config.width/2, y: enemy_padding},
-				{x: config.width - enemy_padding, y: enemy_padding},
-				{x: config.width - enemy_padding, y: config.height/2},
+<head>
+<title>ENTI Survivors</title>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js" integrity="sha512-kg6fSrg6FkD9Ua02PzuA289KatVkTp6HdiFrSKwnz1bKBeKe5JG54rNeYZeghYO/I4ka49rb9H/9Ezcq9Se3iQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+</head>
+<body>
+<h1>ENTI Survivors</h1>
+<script>
 
-				{x: config.width - enemy_padding, y: config.height - enemy_padding},
-				{x: config.width/2, y: config.height - enemy_padding},
-				{x: enemy_padding, y: config.height - enemy_padding},
+const config = {
+	width: 960,
+	height: 540,
+	scene:{
+		preload: precarga,
+		create: crear,
+		update: actualiza
+	}
+};
 
-				{x: enemy_padding, y: config.height/2}
-			];
+const game = new Phaser.Game(config);
 
-			let key_left;
-			let key_right;
-			let key_up;
-			let key_down;
+let player;
+let enemies = [];
+let enemy_padding = 128;
+let enemies_pos = [
+	{x: enemy_padding, y: enemy_padding},
+	{x: config.width/2, y: enemy_padding},
+	{x: config.width - enemy_padding, y: enemy_padding},
+
+	{x: config.width - enemy_padding, y: config.height/2},
 
 
-			function precarga(){
-				this.load.image("player-img", "player.png");
+	{x: config.width - enemy_padding, y: config.height - enemy_padding},
+	{x: config.width/2, y: config.height - enemy_padding},
+	{x: enemy_padding, y: config.height - enemy_padding},
+
+	{x: enemy_padding, y: config.height/2}
+];
+
+let player_speed = 2;
+
+let key_left;
+let key_right;
+let key_up;
+let key_down;
 
 
-			}
+function precarga ()
+{
+	this.load.image("player-img", "player.png");
 
-			function crear(){
-				this.load.image("bg-img","imgs/background.png");
-				this.load.image("player-img","imgs/Player.png");
-
-				this.physics.add.existing(player, false);
-				player.body.setCollideWorldBounds(true);
-
-				for(let i =0; i < enemies_pos.length; i++){
-					enemies[i].push(this.add.image(enemies_pos[i].x, enemies_[i].y, "player-img"));
-					this.physics.add.existing(enemies[i], false);
-					enemies[i].body.setCollideWorldBounds(true);
-					this.physics.arcade.collide(player, enemies[i]);
-					for (let i = 0; i < enemies.length; i++){
-						if ( enemies[i] != enemies[o]){
-							this.physics.arcade.collide(enemies[o], enemies[i]);
-						}
-					}
-				}
+}
 
 
-				key_left = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.LEFT);
-				key_right = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.RIGHT);
-				key_up = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.UP);
-				key_down = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.DOWN);
-			}
+function crear ()
+{
+	player = this.add.image(config.width/2, config.height/2, "player-img");
 
-			
-			function actualiza()
-			{
-				
-				for (let i =0; i < enemies.length; i++){
-					this.physics.moveToObject(enemies[i], player, 50);
-				}
+	for (let i = 0; i < enemies_pos.length; i++){
+		this.add.image(enemies_pos[i].x, enemies_pos[i].y, "player-img");
+	}
 
-				if (key_left.isDOWN){
-					player.x -= player_speed;
-				}
-				if (key_right.isDOWN){
-					player.x += player_speed;
-				}
-				if (key_up.isDOWN){
-					player.y -= player_speed;
-				}
-				if (key_down.isDOWN){
-					player.y += player_speed;
-				}
-			}
-			
-		</script>
-	</body>
+
+
+	key_left = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.LEFT);
+	key_right = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.RIGHT);
+	key_up = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.UP);
+	key_down = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.DOWN);
+}
+
+function actualiza ()
+{
+	if (key_left.isDown){
+		player.x -= player_speed;
+	}
+	else if(key_right.isDown){
+		player.x += player_speed;
+	}
+
+	if (key_up.isDown){
+		player.y -= player_speed;
+	}
+	else if (key_down.isDown){
+		player.y += player_speed;
+	}
+}
+
+
+
+
+</script>
+</body>
 </html>
